# NoSniper

./: .gitignore  CMakeLists.txt  README.md  design_project.txt  main.cpp
include/: FIleResponse.h  baseinfo.h
include/util/: filehelper.h
src/: FileResponse.cpp  main.cpp
src/util/: filehelper.cpp
